--- a/Regression/Assignment1/Regression_line_solution.ipynb
+++ b/Regression/Assignment1/Regression_line_solution.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Question: Refer to the attached file and write a Python code to find the regression line using the theoretical method taught in the class. (3 marks)\n",
+    "Question: Refer to the attached file and write a Python code to find the regression line using the theoretical method \n",
     "\n",
     "Y = theta0 + theta1 . X"
    ]
