--- a/Regression/Assignment1/regression_line_approach_1.ipynb
+++ b/Regression/Assignment1/regression_line_approach_1.ipynb
@@ -26,7 +26,7 @@
     }
    ],
    "source": [
-    "# write a Python code to find the regression line using the theoretical method taught in the class using Salary_Data.csv. \n",
+    "# write a Python code to find the regression line using the theoretical method using Salary_Data.csv. \n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
